refactor: use vite instead of webpack

--- a/ui/src/index.sass
+++ b/ui/src/index.sass
@@ -1,7 +1,5 @@
-@import 'quasar/src/css/variables.sass'
-
-@import './components/Component.sass'
+@use './components/Component'
 
 
-@import './directives/Directive.sass'
+@use './directives/Directive'
 
