refactor: remove example Component and Directive

--- a/ui/src/index.sass
+++ b/ui/src/index.sass
@@ -1,5 +1,5 @@
-@use './components/Component'
+// @use './components/Component'
 
 
-@use './directives/Directive'
+// @use './directives/Directive'
 
